--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
-.main {
+.content {
   display: grid;
   grid-template-columns: 30rem;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
 }
