--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,18 +1,20 @@
-<form class="login">
+<form class="login" (ngSubmit)="onLogin()" #f="ngForm">
   <div>
     <mat-form-field appearance="outline" class="login__input">
       <mat-label>Username</mat-label>
-      <input matInput placeholder="Enter your username">
+      <input matInput placeholder="Enter your username" ngModel name="username" required>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field appearance="outline" class="login__input">
       <mat-label>Password</mat-label>
-      <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
-      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-pressed]="hide">
-        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      <input matInput placeholder="Enter your password" ngModel name="password" required minlength="4" maxlength="8"
+        [type]="passwordHidden ? 'password' : 'text'" (input)="onCheckPasswordLength()">
+      <button mat-icon-button matSuffix (click)="passwordHidden = !passwordHidden" [attr.aria-pressed]="passwordHidden">
+        <mat-icon>{{passwordHidden ? 'visibility_off' : 'visibility'}}</mat-icon>
       </button>
+      <mat-hint *ngIf="f.value.password && !passwordValid">Minimum of 4 characters</mat-hint>
     </mat-form-field>
   </div>
-  <button mat-raised-button class="login__btn">Sign in</button>
+  <button mat-raised-button type="submit" [disabled]="!f.valid" class="login__btn">Sign in</button>
 </form>
