--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,5 @@
 .content {
-  display: grid;
-  grid-template-columns: 30rem;
-  align-items: center;
+  display: flex;
   justify-content: center;
   height: 100%;
 }
