--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -1,14 +1,14 @@
 .login {
-    margin-top: -75%;
+    margin-top: 50%;
     display: grid;
 
     &__input {
-        width: 100%;
+        width: 30rem;
     }
 
     &__btn {
         justify-self: center;
-        background-color: grey;
+        background-color: rgb(58, 51, 51);
         color: #fff;
     }
 }
