--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,7 @@
   display: flex;
   background-color: rgb(58, 51, 51);
   color: #fff;
+  padding: 2rem 3rem 2rem 3rem;
 
   &__title-logo-wrapper {
     cursor: pointer;
