--- a/src/app/components/weather-forecast/weather-forecast.component.scss
+++ b/src/app/components/weather-forecast/weather-forecast.component.scss
@@ -1,4 +1,73 @@
-.weather-content {
-    width: 90vw;
-    margin: 10rem;
+.weather {
+  width: 90vw;
+  margin-top: 10rem;
+
+  &__content {
+    display: flex;
+    justify-content: space-around;
+
+    margin-top: 5rem;
+  }
+
+  &__current {
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+
+    padding: 2rem 4rem 2rem 4rem;
+    border-radius: 5%;
+    color: #fff;
+
+    &-heading {
+      display: grid;
+      justify-content: center;
+      justify-items: center;
+
+      font-size: 2.5rem;
+      font-weight: 400;
+      padding: 2rem;
+
+      & div:nth-child(2) {
+        font-size: 6rem;
+        font-weight: 100;
+        padding: 4rem 1rem 2rem 2rem;
+      }
+    }
+
+    &-details {
+      display: grid;
+      justify-items: center;
+      align-content: center;
+
+      padding: 1rem;
+    }
+
+    &-day {
+      background: linear-gradient(
+        357deg,
+        rgba(95, 157, 255, 1) 0%,
+        rgba(100, 215, 255, 1) 32%,
+        rgba(100, 215, 255, 1) 58%
+      );
+    }
+
+    &-night {
+      background: linear-gradient(
+        357deg,
+        rgba(13, 17, 37, 1) 18%,
+        rgba(13, 25, 78, 1) 43%,
+        rgba(26, 43, 116, 1) 96%
+      );
+    }
+
+    &-icon > * {
+      font-size: 4rem;
+      color: rgb(255, 255, 112);
+      text-shadow: 0 0 0.5rem #fff, 0 0 1rem #fff,
+        0 0 1rem rgba(128, 246, 240, 0.966), 0 0 2rem rgba(122, 243, 237, 0.966),
+        0 0 2rem rgba(214, 253, 251, 0.966), 0 0 2rem rgba(214, 253, 251, 0.966),
+        0 0 2rem rgba(214, 253, 251, 0.966);
+        margin-left: -1rem;
+    }
+  }
 }
