--- a/src/app/components/weather-forecast/weather-forecast.component.html
+++ b/src/app/components/weather-forecast/weather-forecast.component.html
@@ -1,45 +1,10 @@
 <mat-tab-group animationDuration="1000ms" class="weather">
-  <mat-tab label="First">
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon >add</mat-icon></ng-template>
     <div class="weather__content">
-
-      <section class="weather__current"
-        [ngClass]="{'weather__current-day': weatherData?.isDay, 'weather__current-night': !weatherData?.isDay}">
-
-        <div class="weather__current-icon">
-          <mat-icon *ngIf="weatherData?.isDay">wb_sunny</mat-icon>
-          <mat-icon *ngIf="!weatherData?.isDay">nights_stay</mat-icon>
-        </div>
-
-        <div class="weather__current-heading">
-          <div class="weather__current-city">{{weatherData?.city | uppercase}}</div>
-          <div class="weather__current-temp">{{weatherData?.temperature}}&#176;</div>
-        </div>
-
-        <div class="weather__current-details">
-          <div class="weather__current-humidity">Humidity: {{weatherData?.humidity}}%</div>
-          <div class="weather__current-pressure">Atm pressure: {{weatherData?.atmosphericPressure}} hPa</div>
-          <span class="weather__current-wind-direction">Wind direction: {{weatherData?.windDirection}}&#176;</span>
-          <span class="weather__current-wind-speed">Wind speed: {{weatherData?.windSpeed}} m/h</span>
-        </div>
-      </section>
-
-      <section class="weather__forecast">
-        <ngx-charts-line-chart
-        [view]="[700,400]"
-        [scheme]="{domain: ['#0066ff']}"
-        [results]="forecastData"
-        [xAxis]="true"
-        [yAxis]="true"
-        [legend]="true"
-        [showXAxisLabel]="true"
-        [showYAxisLabel]="true"
-        [xAxisLabel]="'5 Day / 3 Hour Forecast'"
-        [yAxisLabel]="'Temperature (&#8451;)'"
-        >
-        
-        </ngx-charts-line-chart>
-      </section>
+      <app-current-weather-widget [currentWeatherData]="currentWeatherData"></app-current-weather-widget>
+      <app-forecast-line-chart [forecastData]="forecastData"></app-forecast-line-chart>
     </div>
   </mat-tab>
-
 </mat-tab-group>
