Added dialog component for adding, removing city

--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -1,13 +1,13 @@
 .login {
     margin-top: 50%;
     display: grid;
+    justify-items: center;
 
     &__input {
         width: 30rem;
     }
 
     &__btn {
-        justify-self: center;
         background-color: rgb(58, 51, 51);
         color: #fff;
     }
