--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,7 +6,7 @@
   padding: 2rem 3rem 2rem 3rem;
 
   &__title-logo-wrapper {
-    cursor: pointer;
+    cursor: default;
     display: flex;
     align-items: center;
   }
