--- a/src/app/components/weather-forecast/current-weather-widget/current-weather-widget.component.scss
+++ b/src/app/components/weather-forecast/current-weather-widget/current-weather-widget.component.scss
@@ -7,6 +7,10 @@
   border-radius: 5%;
   color: #fff;
 
+  & > * {
+    cursor: default;
+  }
+
   &-heading {
     display: grid;
     justify-content: center;
