--- a/src/app/components/weather-forecast/weather-forecast.component.html
+++ b/src/app/components/weather-forecast/weather-forecast.component.html
@@ -1,10 +1,19 @@
 <mat-tab-group animationDuration="1000ms" class="weather">
   <mat-tab>
     <ng-template mat-tab-label>
-      <mat-icon >add</mat-icon></ng-template>
+      <button class="weather__add-btn" (click)="openAddCityDialog()" mat-button>
+        <mat-icon>add</mat-icon>
+      </button>
+    </ng-template>
     <div class="weather__content">
       <app-current-weather-widget [currentWeatherData]="currentWeatherData"></app-current-weather-widget>
       <app-forecast-line-chart [forecastData]="forecastData"></app-forecast-line-chart>
     </div>
+  </mat-tab>
+
+  <mat-tab>
+    <ng-template mat-tab-label>
+        <mat-icon class="weather__remove-btn" (click)="openRemoveCityDialog()">delete</mat-icon>
+    </ng-template>
   </mat-tab>
 </mat-tab-group>
