--- a/src/app/components/weather-forecast/forecast-line-chart/forecast-line-chart.component.html
+++ b/src/app/components/weather-forecast/forecast-line-chart/forecast-line-chart.component.html
@@ -1,16 +1,15 @@
 <!-- XAxisLabel is broken sometimes -->
 <section class="weather__forecast">
-  <ngx-charts-line-chart
-  [view]="[600,300]"
-  [scheme]="{domain: ['#0066ff']}"
-  [results]="forecastData"
-  [xAxis]="true"
-  [yAxis]="true"
-  [legend]="true"
-  [showXAxisLabel]="false"
-  [showYAxisLabel]="true"
-  [xAxisLabel]="'5 Day / 3 Hour Forecast'"
-  [yAxisLabel]="'Temperature (&#8451;)'"
-  >
-  </ngx-charts-line-chart>
+    <ngx-charts-line-chart
+    [scheme]="{domain: ['#0066ff']}"
+    [results]="forecastData"
+    [xAxis]="true"
+    [yAxis]="true"
+    [legend]="false"
+    [showXAxisLabel]="false"
+    [showYAxisLabel]="true"
+    [xAxisLabel]="'5 Day / 3 Hour Forecast'"
+    [yAxisLabel]="'Temperature (&#8451;)'"
+    >
+    </ngx-charts-line-chart>
 </section>
