--- a/src/app/components/weather-forecast/weather-forecast.component.html
+++ b/src/app/components/weather-forecast/weather-forecast.component.html
@@ -1,7 +1,6 @@
 <mat-tab-group animationDuration="1000ms" class="weather">
-
   <mat-tab *ngFor="let weatherRecord of usersWeatherData" [label]="weatherRecord?.city | uppercase">
-    <ng-template style="color: red" mat-tab-label>{{weatherRecord.city | uppercase}}
+    <ng-template mat-tab-label>{{weatherRecord.city | uppercase}}
       <mat-icon class="weather__remove-btn" (click)="openRemoveCityDialog(weatherRecord?.city)">delete</mat-icon>
     </ng-template>
     <div *ngIf="!error" class="weather__content">
@@ -10,9 +9,7 @@
     </div>
 
     <div *ngIf="error">
-      <h3 class="weather__error" style="text-align: center; padding: 2rem;">
-        We' re sorry. Something went wrong with your request. Please try again later.
-      </h3>
+      <h3 class="weather__error">We' re sorry. Something went wrong with your request. Please try again later.</h3>
     </div>
   </mat-tab>
 
@@ -23,5 +20,4 @@
       </button>
     </ng-template>
   </mat-tab>
-
 </mat-tab-group>
