--- a/src/app/components/weather-forecast/weather-forecast.component.scss
+++ b/src/app/components/weather-forecast/weather-forecast.component.scss
@@ -1,12 +1,18 @@
+$bp-small: 50em; // 800px
+
 .weather {
   width: 90vw;
   margin-top: 10rem;
 
   &__content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
-
     margin-top: 5rem;
+
+    @media only screen and (max-width: $bp-small) {
+      margin-top: 2rem;
+    }
   }
 
   &__add-btn {
@@ -19,5 +25,10 @@
     bottom: 40%;
     right: 0;
     font-size: 2rem;
+  }
+
+  &__error {
+    text-align: center;
+    padding: 2rem;
   }
 }
