--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -1,18 +1,24 @@
 .login {
-    margin-top: 50%;
-    display: grid;
-    justify-items: center;
+  margin-top: 50%;
+  display: grid;
+  justify-items: center;
 
-    &__input {
-        width: 30rem;
-    }
+  &__input {
+    width: 30rem;
+  }
 
-    &__btn {
-        background-color: rgb(58, 51, 51);
-        color: #fff;
-    }
+  &__btn {
+    background-color: rgb(58, 51, 51);
+    color: #fff;
+  }
+
+  &__error {
+    text-align: center;
+    padding-bottom: 0.5rem;
+    color: red;
+  }
 }
 
 div:nth-child(2) {
-    margin-top: -0.5rem;
+  margin-top: -0.5rem;
 }
