--- a/src/app/components/weather-forecast/forecast-line-chart/forecast-line-chart.component.scss
+++ b/src/app/components/weather-forecast/forecast-line-chart/forecast-line-chart.component.scss
@@ -1,5 +1,4 @@
-$bp-medium: 75em; // 1200px
-$bp-small: 50em; // 800px
+@import '../../../../variables.scss';
 
 .weather__forecast {
   width: 70rem;
