--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -1,5 +1,4 @@
-$color-primary: rgb(58, 51, 51);
-$bp-xxsmall: 21.875em; // 350px
+@import '../../../variables.scss';
 
 .auth-container {
   margin-top: 50%;
@@ -15,13 +14,19 @@ $bp-xxsmall: 21.875em; // 350px
 
   &__btn {
     background-color: $color-primary;
-    color: #fff;
+    color: $color-btn-text;
   }
 
   &__error {
     text-align: center;
     padding-bottom: 0.5rem;
-    color: red;
+    color: $color-warning;
+  }
+
+  &__info {
+    margin-top: 2rem;
+    font-size: 1.2rem;
+    color: rgb(92, 91, 91);
   }
 }
 
@@ -47,7 +52,7 @@ div:nth-child(2) {
     }
 
     &-forecast {
-      background-color: rgb(6, 221, 156);
+      background-color: $color-success;
     }
 
     &-logout {
