--- a/src/app/components/weather-forecast/current-weather-widget/current-weather-widget.component.scss
+++ b/src/app/components/weather-forecast/current-weather-widget/current-weather-widget.component.scss
@@ -1,7 +1,4 @@
-$bp-medium: 75em; // 1200px
-$bp-small: 50em; // 800px
-$bp-xsmall: 31.25em; // 500px
-$bp-xxsmall: 21.875em; // 350px
+@import '../../../../variables.scss';
 
 .weather__current {
   display: grid;
