--- a/src/app/components/weather-forecast/weather-forecast.component.html
+++ b/src/app/components/weather-forecast/weather-forecast.component.html
@@ -1,7 +1,7 @@
-<mat-tab-group animationDuration="1000ms" class="weather" (selectedIndexChange)="tabChange($event)">
+<mat-tab-group [(selectedIndex)]="tabIndex" animationDuration="1000ms" class="weather" (selectedIndexChange)="tabChange($event)">
   <mat-tab *ngFor="let weatherRecord of usersCities" [label]="weatherRecord?.city | uppercase">
     <ng-template mat-tab-label>{{weatherRecord.city | uppercase}}
-      <mat-icon class="weather__remove-btn" (click)="openRemoveCityDialog(weatherRecord?.city)">delete</mat-icon>
+      <mat-icon class="weather__remove-btn" (click)="openRemoveCityDialog(weatherRecord)">delete</mat-icon>
     </ng-template>
     <div *ngIf="!error && weatherRecord?.city === usersCities[tabIndex]?.city" class="weather__content">
       <app-current-weather-widget [city]="weatherRecord?.city" (errorEvent)="handleError($event)"></app-current-weather-widget>
@@ -20,5 +20,8 @@
         <mat-icon>add</mat-icon>
       </button>
     </ng-template>
+    <h3 *ngIf="usersCities.length === 0" class="weather__empty">
+      You don't have any weather information yet. Add a city quickly!
+    </h3>
   </mat-tab>
 </mat-tab-group>
