--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,7 @@
 
   <button *ngIf="activeUser" mat-button [matMenuTriggerFor]="menu" class="header__menu">
     {{activeUser.username}}
+    <mat-icon>keyboard_arrow_down</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="onLogout()">
